# Trabalho-Final-CPD

./: CMakeLists.txt
include/: api_client.h  film_record.h  films.h  films_record.h  genres.h  inverted_index.h  primary_index.h  trie.h
src/: api_client.cpp  films.cpp  films_record.cpp  genres.cpp  inverted_index.cpp  main.cpp  primary_index.cpp  trie.cpp
